sfdx/force-app/main/default/objects/Approval_Audit__c/Approval_Audit__c.object-meta.xml
<CustomObject>
    <label>Approval Audit</label>
    <pluralLabel>Approval Audits</pluralLabel>
    <nameField><label>Name</label><type>Text</type></nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One row per policy rule evaluated on a quote, including STANDARD_POLICY for auto-approvals.</description>
</CustomObject>