sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Audit_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Id__c</fullName>
    <label>Audit Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>