sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reason__c</fullName>
    <label>Decision Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>