sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <type>MasterDetail</type>
    <referenceTo>Quote__c</referenceTo>
    <relationshipName>Approval_Audits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>