sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Requested_Discount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Discount__c</fullName>
    <label>Requested Discount</label>
    <type>Percent</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>