sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Required_Approver__c.field-meta.xml
<CustomField>
    <fullName>Required_Approver__c</fullName>
    <label>Required Approver</label>
    <type>Text</type>
    <length>60</length>
</CustomField>