sfdx/force-app/main/default/objects/Approval_Audit__c/fields/Rule_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Rule_Triggered__c</fullName>
    <label>Rule Triggered</label>
    <type>Text</type>
    <length>60</length>
</CustomField>