sfdx/force-app/main/default/objects/Approval_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote__c</columns>
    <columns>Rule_Triggered__c</columns>
    <columns>Required_Approver__c</columns>
    <columns>Decision__c</columns>
    <columns>Decision_Reason__c</columns>
    <columns>Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Approval Audits</label>
</ListView>